# testgen

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: windsurf-prompts.md
examples/: password_reset.txt
testgen/: __init__.py  cli.py  models.py
testgen/adapters/: __init__.py  base.py  requirement.py
testgen/core/: __init__.py  generator.py  prompts.py
testgen/formatters/: __init__.py  csv_fmt.py  json_fmt.py  markdown.py
testgen/web/: __init__.py  app.py
testgen/web/static/: app.js  index.html  style.css
tests/: test_formatters.py  test_web.py
